Update social media connections

--- a/index.html
+++ b/index.html
@@ -185,9 +185,15 @@
                     <h3 class="top-title">MÉDIAS SOCIAUX</h3>
                     <span class="line"></span>
                     <ul class="social">
-                        <li><i class="fb"></i></li> 
-                        <li><i class="li"></i></li> 
-                        <li><i class="ca"></i></li>  
+                        <a href="https://www.facebook.com/hrubechthessia.hombessa" target="_blank">
+                            <li><i class="fb"></i></li> 
+                        </a>
+                        <a href="https://www.linkedin.com/in/hrubech-hombessa-57b155105/" target="_blank">
+                            <li><i class="li"></i></li>
+                        </a> 
+                        <a href="https://github.com/Hrubech" target="_blank">
+                            <li><i class="ca"></i></li>  
+                        </a>
                     </ul>
                 </div>
             </div>
@@ -237,7 +243,7 @@
 			            <ul class="rslides" id="slider4">
                             <li>
                                 <div class="slider-top">
-                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem<br>Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem<br>Ipsum has been the industry's standard dummy text ever since the 1500s</p>
                                 </div>
                             </li>
                             <li>
