--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 			    <div class="about-top">
 				    <h3 class="top-title">Profil</h3>
 				    <span class="line"></span>
-				    <p class="about-p">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. </p>
+				    <p class="about-p">Après une année de formation en situation de travail (contrat pro) à Orange, je suis à la recherche active d’un poste en CDI en tant que Ingénieur cloud.</p>
+                    <p>J’ai une bonne connaissance des questions liées à l'observabilité notemment avec l'utilisation des outils Prometheus & Grafana.</p>
 				    <p>when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum</p>
 				    <div class="row about-row">
                         <div class="col-md-4 about-row-column">
