--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>MON CV | Hrubech HOMBESSA</title>
+        <!-- Place favicon.ico in the root directory -->
+        <link rel="shortcut icon" type="image/icon" href="images/resume-icon.png" >
         <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
         <link href="css/style.css" rel='stylesheet' type='text/css' />
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
