--- a/index.html
+++ b/index.html
@@ -102,19 +102,19 @@
                     </span>
                     <label class="book"></label>
                     <div class="exp-devide-grid-right">
-                        <h5>INGENIEUR CLOUD</h5>
-                        <small>Modern Sciences & Arts University - 2021 . Actuel</small>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                        <h5>ANALYSTE CLOUD</h5>
+                        <small>Conservatoire National des Arts et Métiers (CNAM Bretagne) - 2021 . 2022</small>
+                        <p>Architectures des systèmes informatiques. Architectures Cloud, intégration des applications et sécurité. Systèmes et applications répartis pour le cloud</p>
                     </div>
                     <div class="exp-devide-grid-left">
                         <h5>MBA1 GESTION DE PROJETS INFORMATIQUES</h5>
-                        <small>Institut d'Enseignement Supérieur d'Informatique et de Gestion - 2020 . 2021</small>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                        <small>Institut d'Enseignement Supérieur d'Informatique et de Gestion (IESIG Paris) - 2020 . 2021</small>
+                        <p>Gestion de projets, Analyse, Audit, Planification, Gestion des ressources, ...</p>
                     </div>
                     <div class="exp-devide-grid-rightb">
                         <h5>ANALYSTE PROGRAMMEUR</h5>
-                        <small>Institut Africain d'Informatique - 2012 . 2015</small>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                        <small>Institut Africain d'Informatique (IAI) - 2012 . 2015</small>
+                        <p>Conception des Systèmes d'Informations (SI), rédaction du cahier de charges, conception de la base de données, développement des applications.</p>
                     </div>
                 </div>
 		    </div>
