--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                 <li><i class="travel"></i></li>
                                 <li><i class="tea"></i></li>
                             </ul>
-                            <a href="uploads/CV HRUBECH - PC.pdf" target="_blank" class="download"><span></span>Télécharger le CV</a>
+                            <a href="uploads/CV HRUBECH DEV DEVOPS CLOUD.pdf" target="_blank" class="download"><span></span>Télécharger le CV</a>
                         </div>
                         <div class="col-md-3 about-row-column">
                             <h3>LANGUES</h3>
