--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 						<div class="col-md-3 skill-column">	
 							<div class="skill-grid">
 								<div class="circle" id="circles-1"></div>									
-								<h3>PHP/LARAVEL</h3>	
+								<h3>JAVASCRIPT/JQUERY</h3>	
 								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 							</div>								  
 						</div>
@@ -138,21 +138,21 @@
 							<div class="skill-grid">
 								<div class="circle" id="circles-2"></div>									
 								<h3>MySQL/SQL SERVER</h3>	
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+								<p>Conception, création et gestion des bases de données</p>
 							</div>								  
 						</div>
 						<div class="col-md-3 skill-column">	
 							<div class="skill-grid">
 								<div class="circle" id="circles-3"></div>									
-								<h3>HTML/CSS</h3>	
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+								<h3>PHP/LARAVEL</h3>	
+								<p>Réalisation du backend des applications web et des API</p>
 							</div>								  
 						</div>
 						<div class="col-md-3 skill-column">	
                             <div class="skill-grid">
                                 <div class="circle" id="circles-4"></div>									
-                                <h3>JAVASCRIPT/JQUERY</h3>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>	
+                                <h3>HTML/CSS</h3>
+                                <p>Réalisation du frontend des applications et des sites web</p>	
                             </div>								  
 					    </div>
 				        <div class="clearfix"> </div>
@@ -172,7 +172,7 @@
                         percentage: percentage,
                         radius: 80,
                         width:  15,
-                        number: percentage / 10,
+                        number: percentage,
                         text: '%',
                         colors: colors[i - 1]
                     });
@@ -259,16 +259,6 @@
                                     <p>printing and typesetting Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem<br>Ipsum has been the industry's standard dummy text ever since the 1500s</p>
                                 </div>
                             </li>
-                            <li>
-                                <div class="slider-top">
-                                    <p>and typesetting Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem<br>Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="slider-top">
-                                    <p>typesetting Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem<br>Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                                </div>
-                            </li>
 			            </ul>
 			        </div>
 			        <div class="clearfix"> </div>
@@ -304,7 +294,7 @@
 			    <div class="contact-top">
 				    <h3 class="top-title">Me Contacter</h3>
 				    <span class="line"></span>
-				    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem<br>Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+				    <p>Je suis disponible pour échanger sur des éventuelles opportunités.<br>Vous pouvez me contacter par mail ou directement par téléphone ou à partir de mes réseaux.</p>
 				    <div class="row contact-row">
                         <div class="col-md-4 contact-column">
                             <i class="loc"></i>
