--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 							<div class="skill-grid">
 								<div class="circle" id="circles-1"></div>									
 								<h3>JAVASCRIPT/JQUERY</h3>	
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+								<p>Création du contenu à mise à jour dynamique, contrôle du multimédia, animation des images et autres.</p>
 							</div>								  
 						</div>
 						<div class="col-md-3 skill-column">	
