--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
 	    <div class="header-top">
 			<h2>Hrubech HOMBESSA</h2>
-			<small>Ingénieur performance cloud & Développeur fullstack <br>Ile de france, France</small>
+			<small>Développeur fullstack || Ingénieur DevOps || Analyste cloud <br>Ile de france, France</small>
 	    </div>
 	    <!-- Header Ends Here ---->
 	    <!--- About Me Starts Here --->
@@ -35,9 +35,9 @@
 			    <div class="about-top">
 				    <h3 class="top-title">Profil</h3>
 				    <span class="line"></span>
-				    <p class="about-p">Après une année de formation en situation de travail (contrat pro) à Orange, je suis à la recherche active d’un poste en CDI en tant que Ingénieur cloud.</p>
-                    <p>J’ai une bonne connaissance des questions liées à l'observabilité notemment avec l'utilisation des outils Prometheus & Grafana.</p>
-				    <p>when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum</p>
+				    <p class="about-p">Après une année de formation en situation de travail (contrat pro) à Orange, je suis à la recherche active d’un poste en CDI en tant que Ingénieur DevOps/Cloud junior, je reste également ouvert à un poste de développeur full stack avec une perspective d'évolution vers un profil DevOps/Cloud. Je cherche principalement en île de France.</p>
+                    <p>J’ai une bonne connaissance des questions liées au monitoring notemment avec l'utilisation des outils Prometheus & Grafana.</p>
+				    <p>J'ai une expérience significative en tant que développeur full stack, j'ai déjà travaillé sur plusieurs projets dans différents domaines de métiers</p>
 				    <div class="row about-row">
                         <div class="col-md-4 about-row-column">
                             <ul class="about-details"> 
