--- a/index.html
+++ b/index.html
@@ -130,22 +130,22 @@
 						<div class="col-md-3 skill-column">	
 							<div class="skill-grid">
 								<div class="circle" id="circles-1"></div>									
-								<h3>JAVASCRIPT/JQUERY</h3>	
-								<p>Création du contenu à mise à jour dynamique, contrôle du multimédia, animation des images et autres.</p>
+								<h3>DevOps</h3>	
+								<p>Mise en place des pipelines CI/CD pour la mise à l'échelle des applications</p>
 							</div>								  
 						</div>
 						<div class="col-md-3 skill-column">	
 							<div class="skill-grid">
 								<div class="circle" id="circles-2"></div>									
-								<h3>MySQL/SQL SERVER</h3>	
-								<p>Conception, création et gestion des bases de données</p>
+								<h3>Cloud</h3>	
+								<p>Conception, création et administration des architectures dans le cloud</p>
 							</div>								  
 						</div>
 						<div class="col-md-3 skill-column">	
 							<div class="skill-grid">
 								<div class="circle" id="circles-3"></div>									
-								<h3>PHP/LARAVEL</h3>	
-								<p>Réalisation du backend des applications web et des API</p>
+								<h3>Developpement</h3>	
+								<p>Conception et réalisation des applications web et des API</p>
 							</div>								  
 						</div>
 						<div class="col-md-3 skill-column">	
@@ -298,7 +298,7 @@
 				    <div class="row contact-row">
                         <div class="col-md-4 contact-column">
                             <i class="loc"></i>
-                            <p>44 Boulevard Anatole France,<br> Ile de France, France</p>
+                            <p>138 rue nationale,<br> 75013 Paris, France</p>
                         </div>
                         <div class="col-md-4 contact-column">
                             <i class="mail"></i>
@@ -331,7 +331,7 @@
         <!--- Footer Starts Here ---->
         <div class="footer">
             <div class="container">
-                <p class="copyright">2022 Mon CV By <a href="https://hrubech.github.io/">Hrubech</a></p>
+                <p class="copyright">2024 Mon CV By <a href="https://hrubech.github.io/">Hrubech</a></p>
             </div>
         </div>
         <!--- Footer Ends Here ---->
