--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
 						<div class="col-md-3 skill-column">	
                             <div class="skill-grid">
                                 <div class="circle" id="circles-4"></div>									
-                                <h3>HTML/CSS</h3>
-                                <p>Réalisation du frontend des applications et des sites web</p>	
+                                <h3>Gestion de projets</h3>
+                                <p>Recceuil et analyse des besoins client, mise en place du cahier de charges</p>	
                             </div>								  
 					    </div>
 				        <div class="clearfix"> </div>
