--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			    <div class="about-top">
 				    <h3 class="top-title">Profil</h3>
 				    <span class="line"></span>
-				    <p class="about-p">Après une année de formation en situation de travail (contrat pro) à Orange, je suis à la recherche active d’un poste en CDI en tant que Ingénieur DevOps/Cloud junior, je reste également ouvert à un poste de développeur full stack avec une perspective d'évolution vers un profil DevOps/Cloud. Je cherche principalement en île de France.</p>
+				    <p class="about-p">Ingénieur DevOps avec une solide expérience en développement full-stack et une expertise croissante en automatisation, CI/CD, gestion des infrastructures cloud et monitoring. Passionné par l'optimisation des processus, je conçois des solutions scalables et résilientes pour accélérer les déploiements et renforcer la fiabilité des systèmes. Je cherche principalement en île de France.</p>
                     <p>J’ai une bonne connaissance des questions liées au monitoring notemment avec l'utilisation des outils Prometheus & Grafana.</p>
 				    <p>J'ai une expérience significative en tant que développeur full stack, j'ai déjà travaillé sur plusieurs projets dans différents domaines de métiers</p>
 				    <div class="row about-row">
